--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -11,11 +11,13 @@
   ],
   "scripts": {
     "build": "rm -rf types && yarn types",
-    "dev": "yarn types",
+    "dev": "yarn build",
     "types": "tsc -p tsconfig.types.json"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.7.9",
     "antd": "^5.18.0",
+    "ahooks": "^3.7.7",
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21"
   },
