--- a/packages/ui-kit/tsconfig.types.json
+++ b/packages/ui-kit/tsconfig.types.json
@@ -2,5 +2,6 @@
   "compilerOptions": {
     "outDir": "./types"
   },
-  "extends": "./tsconfig.json"
+  "extends": "./tsconfig.json",
+  "exclude": ["./src/**/demo/**/*"]
 }
