--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -20,9 +20,9 @@
     "ahooks": "^3.7.7",
     "antd": "^5.18.0",
     "axios": "^1.4.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
     "list-to-tree": "^2.2.5",
-    "md5": "^2.3.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "monaco-themes": "^0.4.4",
@@ -31,6 +31,7 @@
     "wangeditor": "^4.7.15"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@vitejs/plugin-react": "^4.0.0",
     "less": "^4.1.3",
     "rimraf": "^5.0.0",
