--- a/nginx.conf
+++ b/nginx.conf
@@ -33,14 +33,14 @@ http {
 
     # 后台
     location /admin {
-      alias  /opt/nest-blog/admin/dist/;
+      alias  /opt/ryal-blog/admin/dist/;
       index index.html;
       try_files $uri /index.html index.html;
     }
 
     # 上传文件
     location /uploads {
-      alias  /opt/nest-blog/uploads;
+      alias  /opt/ryal-blog/uploads;
     }
     
     if ($scheme = http ) {
