--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "nest-blog",
+  "name": "@ryal/blog-website",
   "version": "2.0.0",
   "private": "true",
   "description": "blog developed by nestjs",
   "scripts": {
     "dev": "lerna run dev",
-    "dev:uikit": "lerna run dev --scope @nest-components/ui-kit",
-    "dev:admin": " yarn dev:uikit & lerna run dev --scope @nest-blog/admin",
-    "dev:client": "lerna run dev --scope @nest-blog/client",
-    "dev:server": "lerna run dev --scope @nest-blog/server",
+    "dev:uikit": "lerna run dev --scope @ryal/ui-kit",
+    "dev:admin": " yarn dev:uikit & lerna run dev --scope @ryal/app-admin",
+    "dev:client": "lerna run dev --scope @ryal/app-client",
+    "dev:server": "lerna run dev --scope @ryal/app-server",
     "build": "lerna run build",
-    "build:uikit": "lerna run build --scope @nest-components/ui-kit",
-    "build:admin": "yarn dev:uikit & lerna run build --scope @nest-blog/admin",
-    "build:client": "lerna run build --scope @nest-blog/client",
-    "build:server": "lerna run build --scope @nest-blog/server",
+    "build:uikit": "lerna run build --scope @ryal/ui-kit",
+    "build:admin": "yarn dev:uikit & lerna run build --scope @ryal/app-admin",
+    "build:client": "lerna run build --scope @ryal/app-client",
+    "build:server": "lerna run build --scope @ryal/app-server",
     "prepare": "npx husky install",
     "bootstrap": "lerna bootstrap"
   },
