--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@ryal/apis",
+  "name": "@ryal/api",
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
   "module": "index.ts",
-  "types": "types/index.d.ts",
+  "types": "index.d.ts",
   "files": [
     "src",
     "types"
