refactor: 增加自动 api

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:admin": "yarn dev:uikit & lerna run build --scope @ryal/app-admin",
     "build:client": "lerna run build --scope @ryal/app-client",
     "build:server": "lerna run build --scope @ryal/app-server",
+    "build:api":"lerna run build --scope @ryal/api",
     "prepare": "npx husky install",
     "bootstrap": "lerna bootstrap"
   },
