--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,9 +10,13 @@
     "types"
   ],
   "scripts": {
-    "build": "npx tsx ./generate.ts"
+    "build": "tsx ./generate.ts"
   },
   "devDependencies": {
-    "swagger-typescript-api": "^13.0.21"
+    "swagger-typescript-api": "^13.0.21",
+    "tsx": "^4.17.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.4"
   }
 }
