--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -45,6 +45,7 @@
     "@nestjs/testing": "^10.2.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.14.194",
     "@types/node": "^20.1.1",
     "@types/supertest": "^2.0.12",
