--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,6 +13,8 @@
     "uno:dev": "yarn uno:build - -w"
   },
   "dependencies": {
+    "@ryal/api": "^1.0.0",
+    "@ryal/ui-kit": "^1.0.0",
     "next": "^14.2.3"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.7",
     "highlight.js": "^11.8.0",
     "lodash": "^4.17.21",
@@ -28,7 +31,6 @@
     "markdown-it-anchor": "^8.6.7",
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
-    "cross-env": "^7.0.3",
     "rimraf": "^5.0.1",
     "sass": "^1.62.1",
     "typescript": "^5.0.4"
