--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "description": "blog developed by nestjs",
   "scripts": {
     "dev": "lerna run dev",
-    "dev:uikit": "lerna run dev --scope @ryal/ui-kit",
-    "dev:admin": " yarn dev:uikit & lerna run dev --scope @ryal/app-admin",
+    "dev:admin": "lerna run dev --scope @ryal/app-admin",
     "dev:client": "lerna run dev --scope @ryal/app-client",
     "dev:server": "lerna run dev --scope @ryal/app-server",
     "build": "lerna run build",
-    "build:uikit": "lerna run build --scope @ryal/ui-kit",
-    "build:admin": "yarn dev:uikit & lerna run build --scope @ryal/app-admin",
+    "build:admin": "lerna run build --scope @ryal/app-admin",
     "build:client": "lerna run build --scope @ryal/app-client",
     "build:server": "lerna run build --scope @ryal/app-server",
-    "build:api":"lerna run build --scope @ryal/api",
+    "build:uikit": "lerna run build --scope @ryal/ui-kit && yarn install:uikit",
+    "build:api":"lerna run build --scope @ryal/api && yarn install:api",
+    "install:api":"npx lerna add @ryal/api --scope @ryal/app-admin --scope @ryal/app-client",
+    "install:uikit":"npx lerna add @ryal/ui-kit --scope @ryal/app-admin --scope @ryal/app-client",
     "prepare": "npx husky install",
     "bootstrap": "lerna bootstrap"
   },
