--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -16,12 +16,19 @@
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.7.9",
-    "antd": "^5.18.0",
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/plugin-highlight": "^1.21.0",
+    "@bytemd/react": "^1.21.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-react": "^1.0.6",
     "ahooks": "^3.7.7",
+    "antd": "^5.18.0",
+    "bytemd": "^1.21.0",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
-    "lodash-es": "^4.17.21"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.12"
+    "@types/lodash": "^4.17.7"
   }
 }
