--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,7 +19,6 @@
     "@ryal/ui-kit": "^1.0.0",
     "antd": "^5.18.0",
     "aos": "^2.3.4",
-    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "highlight.js": "^11.8.0",
@@ -35,6 +34,7 @@
     "css-loader": "^6.8.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
+    "mini-css-extract-plugin": "^2.7.5",
     "rimraf": "^5.0.1",
     "sass": "^1.62.1",
     "style-loader": "^3.3.2",
