--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,7 +9,7 @@
     "build": "yarn uno:build && next build",
     "start:prod": "NODE_ENV=production next start -p 4001",
     "start:pm2": "pm2 start pm2.json",
-    "uno:build": "unocss \"./**/*.tsx\" -o ./style/uno.css",
+    "uno:build": "unocss \"./src/**/*.tsx\" -o ./src/style/uno.css",
     "uno:dev": "yarn uno:build - -w"
   },
   "dependencies": {
@@ -27,9 +27,10 @@
     "markdown-it-anchor": "^8.6.7",
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
-    "next": "^14.2.3"
+    "next": "^14.2.4"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "less": "^4.2.0",
